@@ -24,6 +24,7 @@ import java.net.MalformedURLException;
 import java.net.URL;
 import java.util.concurrent.atomic.AtomicLong;
 
+import org.apache.commons.lang.ArrayUtils;
 import org.apache.uima.analysis_engine.AnalysisEngineDescription;
 import org.apache.uima.resource.ConfigurableDataResourceSpecifier;
 import org.apache.uima.resource.CustomResourceSpecifier;
@@ -49,6 +50,7 @@ import org.apache.uima.resource.metadata.impl.ExternalResourceBinding_impl;
 import org.apache.uima.resource.metadata.impl.ResourceManagerConfiguration_impl;
 import org.apache.uima.resource.metadata.impl.ResourceMetaData_impl;
 import org.apache.uima.util.InvalidXMLException;
+import org.uimafit.descriptor.ExternalResource;
 import org.uimafit.factory.ConfigurationParameterFactory.ConfigurationData;
 
 /**
@@ -195,7 +197,7 @@ public final class ExternalResourceFactory {
 	 * @return
 	 */
 	public static ExternalResourceDependency createExternalResourceDependency(final String aKey,
-			final Class<? extends Resource> aInterface, final boolean aOptional) {
+			final Class<?> aInterface, final boolean aOptional) {
 		ExternalResourceDependency dep = new ExternalResourceDependency_impl();
 		dep.setInterfaceName(aInterface.getName());
 		dep.setKey(aKey);
@@ -397,7 +399,8 @@ public final class ExternalResourceFactory {
 	public static void bindResource(ResourceSpecifier aDesc, String aKey,
 			Class<? extends SharedResourceObject> aRes, String aUrl, Object... aParams)
 			throws InvalidXMLException {
-		ExternalResourceDescription extRes = createExternalResourceDescription(aKey, aRes, aUrl,
+		ExternalResourceDescription extRes = createExternalResourceDescription(
+				aRes.getName() + '-' + disambiguator.getAndIncrement(), aRes, aUrl,
 				aParams);
 		bind((AnalysisEngineDescription) aDesc, aKey, extRes);
 	}
@@ -444,6 +447,37 @@ public final class ExternalResourceFactory {
 		if (aDesc instanceof AnalysisEngineDescription) {
 			bind((AnalysisEngineDescription) aDesc, aKey, aResDesc);
 		}
+	}
+
+	/**
+	 * Create a new dependency for the specified resource and bind it. This method is helpful for
+	 * UIMA components that do not use the uimaFIT {@link ExternalResource} annotation, because no
+	 * external resource dependencies can be automatically generated by uimaFIT for such components.
+	 *
+	 * @param aDesc
+	 *            a description.
+	 * @param aKey
+	 *            the key to bind to.
+	 * @param aImpl
+	 *            the resource implementation.
+	 * @param aUrl
+	 *            the resource URL.
+	 * @param aParams
+	 *            additional parameters supported by the resource.
+	 * @throws InvalidXMLException
+	 */
+	public static void createDependencyAndBind(AnalysisEngineDescription aDesc, String aKey,
+			Class<? extends SharedResourceObject> aImpl, String aUrl, Object... aParams)
+			throws InvalidXMLException {
+		if (aDesc.getExternalResourceDependency(aKey) == null) {
+			ExternalResourceDependency[] deps = aDesc.getExternalResourceDependencies();
+			if (deps == null) {
+				deps = new ExternalResourceDependency[] {};
+			}
+			aDesc.setExternalResourceDependencies((ExternalResourceDependency[]) ArrayUtils.add(
+					deps, createExternalResourceDependency(aKey, aImpl, false)));
+		}
+		bindResource(aDesc, aKey, aImpl, aUrl, aParams);
 	}
 
 	/**
